@startuml

title __SPEEDRUN's Class Diagram__\n

  namespace uoc.tfm.vmejia.speedrun {
    class uoc.tfm.vmejia.speedrun.Events {
        - cofreLocation : Location
        + Events()
        + PlayerClickOnChest()
        + PlayerRightClick()
        + onJoin()
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    class uoc.tfm.vmejia.speedrun.MyTrait {
        ~ configCofresIni : boolean
        ~ estaenbase : boolean
        ~ n_tick : int
        ~ n_tick_max : int
        ~ posactual : int
        ~ reco : Recomendar
        ~ start : boolean
        ~ trigerbeginmove : boolean
        ~ world : World
        + MyTrait()
        + movetonextpos()
        + navigationcancel()
        + navigationcomplete()
        + onAttach()
        + onDespawn()
        + onRemove()
        + onSpawn()
        + run()
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    class uoc.tfm.vmejia.speedrun.SpeedRun {
        - JuegoEnMarcha : boolean
        - JuegoReinicio : boolean
        - npc : NPC
        + IsJuegoEnMarcha()
        + getArenaManager()
        + getEscenaManager()
        + getJuegoReinicio()
        + getNPC()
        + onEnable()
        + setJuegoEnMarcha()
        + setJuegoReinicio()
        + setNPC()
    }
  }
  

  uoc.tfm.vmejia.speedrun.Events .up.|> org.bukkit.event.Listener
  uoc.tfm.vmejia.speedrun.Events o-- uoc.tfm.vmejia.speedrun.SpeedRun : minigame
  uoc.tfm.vmejia.speedrun.MyTrait -up-|> net.citizensnpcs.api.trait.Trait
  uoc.tfm.vmejia.speedrun.MyTrait o-- uoc.tfm.vmejia.speedrun.var.Escena : escena
  uoc.tfm.vmejia.speedrun.MyTrait o-- uoc.tfm.vmejia.speedrun.SpeedRun : plugin
  uoc.tfm.vmejia.speedrun.SpeedRun -up-|> org.bukkit.plugin.java.JavaPlugin
  uoc.tfm.vmejia.speedrun.SpeedRun o-- uoc.tfm.vmejia.speedrun.manager.ArenaManager : arenaManager
  uoc.tfm.vmejia.speedrun.SpeedRun o-- uoc.tfm.vmejia.speedrun.manager.EscenaManager : escenaManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
